unpackaged/main/default/objects/Monitoring_Update__c/Monitoring_Update__c.object-meta.xml
<CustomObject>
    <label>Monitoring Update</label>
    <nameField>
        <label>Monitoring Update Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monitoring Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>