unpackaged/main/default/objects/Monitoring_Update__c/fields/All_Redemption_Met__c.field-meta.xml
<CustomField>
    <fullName>All_Redemption_Met__c</fullName>
    <label>All Redemption Met</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>