unpackaged/main/default/objects/Monitoring_Update__c/fields/All_Redemption_Met_Blank__c.field-meta.xml
<CustomField>
    <fullName>All_Redemption_Met_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(All_Redemption_Met__c))</formula>
    <label>All Redemption Met Blank</label>
    <type>Checkbox</type>
</CustomField>