unpackaged/main/default/objects/Monitoring_Update__c/fields/Assets_Blank__c.field-meta.xml
<CustomField>
    <fullName>Assets_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Assets__c)</formula>
    <label>Assets Blank</label>
    <type>Checkbox</type>
</CustomField>