unpackaged/main/default/objects/Monitoring_Update__c/fields/Average_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Average_Occupancy__c</fullName>
    <label>Average Occupancy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>