unpackaged/main/default/objects/Monitoring_Update__c/fields/Average_Occupancy_Blank__c.field-meta.xml
<CustomField>
    <fullName>Average_Occupancy_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Average_Occupancy__c)</formula>
    <label>Average Occupancy Blank</label>
    <type>Checkbox</type>
</CustomField>