unpackaged/main/default/objects/Monitoring_Update__c/fields/Capital_Deployed__c.field-meta.xml
<CustomField>
    <fullName>Capital_Deployed__c</fullName>
    <label>Capital Deployed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>