unpackaged/main/default/objects/Monitoring_Update__c/fields/Capital_Deployed_Blank__c.field-meta.xml
<CustomField>
    <fullName>Capital_Deployed_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Capital_Deployed__c)</formula>
    <label>Capital Deployed Blank</label>
    <type>Checkbox</type>
</CustomField>