unpackaged/main/default/objects/Monitoring_Update__c/fields/Capital_Raised_Blank__c.field-meta.xml
<CustomField>
    <fullName>Capital_Raised_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Capital_Raised__c)</formula>
    <label>Capital Raised Blank</label>
    <type>Checkbox</type>
</CustomField>