unpackaged/main/default/objects/Monitoring_Update__c/fields/Cash_Flows__c.field-meta.xml
<CustomField>
    <fullName>Cash_Flows__c</fullName>
    <label>Cash Flows</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>