unpackaged/main/default/objects/Monitoring_Update__c/fields/Cash_Flows_Blank__c.field-meta.xml
<CustomField>
    <fullName>Cash_Flows_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Cash_Flows__c)</formula>
    <label>Cash Flows Blank</label>
    <type>Checkbox</type>
</CustomField>