unpackaged/main/default/objects/Monitoring_Update__c/fields/Committed_Cash__c.field-meta.xml
<CustomField>
    <fullName>Committed_Cash__c</fullName>
    <label>Committed Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>