unpackaged/main/default/objects/Monitoring_Update__c/fields/Committed_Cash_Blank__c.field-meta.xml
<CustomField>
    <fullName>Committed_Cash_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Committed_Cash__c)</formula>
    <label>Committed Cash Blank</label>
    <type>Checkbox</type>
</CustomField>