unpackaged/main/default/objects/Monitoring_Update__c/fields/Construction_Budget__c.field-meta.xml
<CustomField>
    <fullName>Construction_Budget__c</fullName>
    <label>Construction Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>