unpackaged/main/default/objects/Monitoring_Update__c/fields/Construction_Budget_Blank__c.field-meta.xml
<CustomField>
    <fullName>Construction_Budget_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Construction_Budget__c)</formula>
    <label>Construction Budget Blank</label>
    <type>Checkbox</type>
</CustomField>