unpackaged/main/default/objects/Monitoring_Update__c/fields/Construction_Status__c.field-meta.xml
<CustomField>
    <fullName>Construction_Status__c</fullName>
    <label>Construction Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>