unpackaged/main/default/objects/Monitoring_Update__c/fields/Coverage_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Ratio__c</fullName>
    <label>Coverage Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>