unpackaged/main/default/objects/Monitoring_Update__c/fields/Coverage_Ratio_Blank__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Ratio_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Coverage_Ratio__c)</formula>
    <label>Coverage Ratio Blank</label>
    <type>Checkbox</type>
</CustomField>