unpackaged/main/default/objects/Monitoring_Update__c/fields/Current_Distribution_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Current_Distribution_Percentage__c</fullName>
    <label>Current Distribution Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>