unpackaged/main/default/objects/Monitoring_Update__c/fields/Current_Distribution_Percentage_Blank__c.field-meta.xml
<CustomField>
    <fullName>Current_Distribution_Percentage_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Current_Distribution_Percentage__c)</formula>
    <label>Current Distribution Percentage Blank</label>
    <type>Checkbox</type>
</CustomField>