unpackaged/main/default/objects/Monitoring_Update__c/fields/Debt_Service_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Debt_Service_Coverage__c</fullName>
    <label>Debt Service Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>