unpackaged/main/default/objects/Monitoring_Update__c/fields/Debt_Service_Coverage_Blank__c.field-meta.xml
<CustomField>
    <fullName>Debt_Service_Coverage_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Debt_Service_Coverage__c)</formula>
    <label>Debt Service Coverage Blank</label>
    <type>Checkbox</type>
</CustomField>