unpackaged/main/default/objects/Monitoring_Update__c/fields/Distribution__c.field-meta.xml
<CustomField>
    <fullName>Distribution__c</fullName>
    <label>Distribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>