unpackaged/main/default/objects/Monitoring_Update__c/fields/Distribution_Amount_Blank__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Amount_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Distribution_Amount__c)</formula>
    <label>Distribution Amount Blank</label>
    <type>Checkbox</type>
</CustomField>