unpackaged/main/default/objects/Monitoring_Update__c/fields/Equity_Blank__c.field-meta.xml
<CustomField>
    <fullName>Equity_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Equity__c)</formula>
    <label>Equity Blank</label>
    <type>Checkbox</type>
</CustomField>