unpackaged/main/default/objects/Monitoring_Update__c/fields/Full_Cycle_Assets_Blank__c.field-meta.xml
<CustomField>
    <fullName>Full_Cycle_Assets_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(FullCycle_Assets__c)</formula>
    <label>Full-Cycle Assets Blank</label>
    <type>Checkbox</type>
</CustomField>