unpackaged/main/default/objects/Monitoring_Update__c/fields/FullCycle_Assets__c.field-meta.xml
<CustomField>
    <fullName>FullCycle_Assets__c</fullName>
    <label>Full-Cycle Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>