unpackaged/main/default/objects/Monitoring_Update__c/fields/Liabilities_Blank__c.field-meta.xml
<CustomField>
    <fullName>Liabilities_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Liabilities__c)</formula>
    <label>Liabilities Blank</label>
    <type>Checkbox</type>
</CustomField>