unpackaged/main/default/objects/Monitoring_Update__c/fields/Life_Cycle_Status_Blank__c.field-meta.xml
<CustomField>
    <fullName>Life_Cycle_Status_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(LifeCycle_Status__c))</formula>
    <label>Life-Cycle Status Blank</label>
    <type>Checkbox</type>
</CustomField>