unpackaged/main/default/objects/Monitoring_Update__c/fields/NAV_as_of_Date__c.field-meta.xml
<CustomField>
    <fullName>NAV_as_of_Date__c</fullName>
    <label>NAV as of Date</label>
    <type>Date</type>
</CustomField>