unpackaged/main/default/objects/Monitoring_Update__c/fields/NAV_as_of_Date_Blank__c.field-meta.xml
<CustomField>
    <fullName>NAV_as_of_Date_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(NAV_as_of_Date__c)</formula>
    <label>NAV as of Date Blank</label>
    <type>Checkbox</type>
</CustomField>