unpackaged/main/default/objects/Monitoring_Update__c/fields/NAV_Valuation_Blank__c.field-meta.xml
<CustomField>
    <fullName>NAV_Valuation_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(NAVValuation__c)</formula>
    <label>NAV/Valuation Blank</label>
    <type>Checkbox</type>
</CustomField>