unpackaged/main/default/objects/Monitoring_Update__c/fields/NAVValuation__c.field-meta.xml
<CustomField>
    <fullName>NAVValuation__c</fullName>
    <label>NAV/Valuation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>