unpackaged/main/default/objects/Monitoring_Update__c/fields/Nearest_Loan_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Loan_Maturity__c</fullName>
    <label>Nearest Loan Maturity</label>
    <type>Date</type>
</CustomField>