unpackaged/main/default/objects/Monitoring_Update__c/fields/Nearest_Loan_Maturity_Blank__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Loan_Maturity_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Nearest_Loan_Maturity__c)</formula>
    <label>Nearest Loan Maturity Blank</label>
    <type>Checkbox</type>
</CustomField>