unpackaged/main/default/objects/Monitoring_Update__c/fields/NOI_Blank__c.field-meta.xml
<CustomField>
    <fullName>NOI_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(NOI__c)</formula>
    <label>NOI Blank</label>
    <type>Checkbox</type>
</CustomField>