unpackaged/main/default/objects/Monitoring_Update__c/fields/NOI_Variance_to_Budget__c.field-meta.xml
<CustomField>
    <fullName>NOI_Variance_to_Budget__c</fullName>
    <label>NOI Variance to Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>