unpackaged/main/default/objects/Monitoring_Update__c/fields/NOI_Variance_to_Budget_Blank__c.field-meta.xml
<CustomField>
    <fullName>NOI_Variance_to_Budget_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(NOI_Variance_to_Budget__c)</formula>
    <label>NOI Variance to Budget Blank</label>
    <type>Checkbox</type>
</CustomField>