unpackaged/main/default/objects/Monitoring_Update__c/fields/Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Occupancy__c</fullName>
    <label>Occupancy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>