unpackaged/main/default/objects/Monitoring_Update__c/fields/Occupancy_Blank__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Occupancy__c)</formula>
    <label>Occupancy Blank</label>
    <type>Checkbox</type>
</CustomField>