unpackaged/main/default/objects/Monitoring_Update__c/fields/Operating_Assets__c.field-meta.xml
<CustomField>
    <fullName>Operating_Assets__c</fullName>
    <label>Operating Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>