unpackaged/main/default/objects/Monitoring_Update__c/fields/Operating_Assets_Blank__c.field-meta.xml
<CustomField>
    <fullName>Operating_Assets_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Operating_Assets__c)</formula>
    <label>Operating Assets Blank</label>
    <type>Checkbox</type>
</CustomField>