unpackaged/main/default/objects/Monitoring_Update__c/fields/Performance_Status__c.field-meta.xml
<CustomField>
    <fullName>Performance_Status__c</fullName>
    <label>Performance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under Performing</fullName>
            </value>
            <value>
                <fullName>Performing</fullName>
            </value>
            <value>
                <fullName>Watch List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>