unpackaged/main/default/objects/Monitoring_Update__c/fields/Performance_Status_Blank__c.field-meta.xml
<CustomField>
    <fullName>Performance_Status_Blank__c</fullName>
    <formula>ISBLANK(TEXT(Performance_Status__c))</formula>
    <label>Performance Status Blank</label>
    <type>Checkbox</type>
</CustomField>