unpackaged/main/default/objects/Monitoring_Update__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Monitoring Updates</relationshipLabel>
    <relationshipName>Monitoring_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>