unpackaged/main/default/objects/Monitoring_Update__c/fields/Redemptions__c.field-meta.xml
<CustomField>
    <fullName>Redemptions__c</fullName>
    <label>Redemptions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>