unpackaged/main/default/objects/Monitoring_Update__c/fields/Redemptions_Blank__c.field-meta.xml
<CustomField>
    <fullName>Redemptions_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Redemptions__c)</formula>
    <label>Redemptions Blank</label>
    <type>Checkbox</type>
</CustomField>