unpackaged/main/default/objects/Monitoring_Update__c/fields/Reserves_Blank__c.field-meta.xml
<CustomField>
    <fullName>Reserves_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Reserves__c)</formula>
    <label>Reserves Blank</label>
    <type>Checkbox</type>
</CustomField>