unpackaged/main/default/objects/Monitoring_Update__c/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <label>Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Review</fullName>
            </value>
            <value>
                <fullName>Ongoing Monitoring</fullName>
            </value>
            <value>
                <fullName>Event Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>