unpackaged/main/default/objects/Monitoring_Update__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor</label>
    <referenceTo>Sponsor__c</referenceTo>
    <relationshipLabel>Monitoring Updates</relationshipLabel>
    <relationshipName>Review_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>