unpackaged/main/default/objects/Monitoring_Update__c/fields/Total_Leverage__c.field-meta.xml
<CustomField>
    <fullName>Total_Leverage__c</fullName>
    <label>Total Leverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>