unpackaged/main/default/objects/Monitoring_Update__c/fields/Total_Leverage_Blank__c.field-meta.xml
<CustomField>
    <fullName>Total_Leverage_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Total_Leverage__c)</formula>
    <label>Total Leverage Blank</label>
    <type>Checkbox</type>
</CustomField>