unpackaged/main/default/objects/Monitoring_Update__c/fields/Total_Properties__c.field-meta.xml
<CustomField>
    <fullName>Total_Properties__c</fullName>
    <label>Total Properties</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>