unpackaged/main/default/objects/Monitoring_Update__c/fields/Total_Properties_Blank__c.field-meta.xml
<CustomField>
    <fullName>Total_Properties_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Total_Properties__c)</formula>
    <label>Total Properties Blank</label>
    <type>Checkbox</type>
</CustomField>