unpackaged/main/default/objects/Monitoring_Update__c/fields/Total_Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>Total_Square_Feet__c</fullName>
    <label>Total Square Feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>