unpackaged/main/default/objects/Monitoring_Update__c/fields/Total_Square_Feet_Blank__c.field-meta.xml
<CustomField>
    <fullName>Total_Square_Feet_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Total_Square_Feet__c)</formula>
    <label>Total Square Feet Blank</label>
    <type>Checkbox</type>
</CustomField>