unpackaged/main/default/objects/Monitoring_Update__c/fields/Total_Units_Blank__c.field-meta.xml
<CustomField>
    <fullName>Total_Units_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Total_Units__c)</formula>
    <label>Total Units Blank</label>
    <type>Checkbox</type>
</CustomField>