unpackaged/main/default/objects/Monitoring_Update__c/fields/Uncommitted_Cash_Blank__c.field-meta.xml
<CustomField>
    <fullName>Uncommitted_Cash_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Uncommitted_Cash__c)</formula>
    <label>Uncommitted Cash Blank</label>
    <type>Checkbox</type>
</CustomField>