unpackaged/main/default/objects/Monitoring_Update__c/fields/Variance_from_Target__c.field-meta.xml
<CustomField>
    <fullName>Variance_from_Target__c</fullName>
    <label>Variance from Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>