unpackaged/main/default/objects/Monitoring_Update__c/fields/Variance_from_Target_Blank__c.field-meta.xml
<CustomField>
    <fullName>Variance_from_Target_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISNULL(Variance_from_Target__c)</formula>
    <label>Variance from Target Blank</label>
    <type>Checkbox</type>
</CustomField>