unpackaged/main/default/objects/Monitoring_Update__c/recordTypes/Product.recordType-meta.xml
<RecordType>
    <fullName>Product</fullName>
    <active>true</active>
    <label>Product</label>
</RecordType>